--- a/fs-blog/src/main/resources/application.yml
+++ b/fs-blog/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/blog?characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: 123456
+    password: fsfs
     driver-class-name: com.mysql.cj.jdbc.Driver
   servlet:
     multipart:
