--- a/fs-admin/src/main/resources/application.yml
+++ b/fs-admin/src/main/resources/application.yml
@@ -21,3 +21,12 @@ mybatis-plus:
       logic-delete-value: 1
       logic-not-delete-value: 0
       id-type: auto
+
+# 七牛云
+oss:
+  accessKey: YrNRJryIwW1mMIFGoafbJxbPrIVy7qgNndQievhZ
+  secretKey: FeueHhpU328oPSI6wvWkn7Os0OY42wglbXMs8J3Q
+  # 云空间名称
+  bucket: fsublog
+  # 云空间域名
+  domainName: http://s2gcdnhjm.hb-bkt.clouddn.com/
