--- a/fs-blog/pom.xml
+++ b/fs-blog/pom.xml
@@ -31,6 +31,23 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.3.0.RELEASE</version>
+                <configuration>
+                    <!-- 指定程序入口 -->
+                    <mainClass>org.example.blog.BlogApplication</mainClass>
+                    <layers>
+                        <enabled>true</enabled>
+                    </layers>
+                </configuration>
+
+                <!--执行重新打包，将springboot依赖都打进jar包中-->
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
