--- a/fs-blog/src/main/resources/application-pro.yml
+++ b/fs-blog/src/main/resources/application-pro.yml
@@ -22,9 +22,9 @@ mybatis-plus:
       id-type: auto
 # 七牛云
 oss:
-  accessKey: YrNRJryIwW1mMIFGoafbJxbPrIVy7qgNndQievhZ
-  secretKey: FeueHhpU328oPSI6wvWkn7Os0OY42wglbXMs8J3Q
+  accessKey: xxx
+  secretKey: xxx
   # 云空间名称
-  bucket: fsublog
+  bucket: xxx
   # 云空间域名
-  domainName: http://s2gcdnhjm.hb-bkt.clouddn.com/
+  domainName: xxx
